--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:title" content="Twitter Player Card Test">
     <meta name="twitter:description" content="Twitter Card でオーディオも埋め込めるっぽい？ ので試す">
     <meta name="twitter:image" content="./favicon.png">
-    <meta name="twitter:player" content="./frame.html">
+    <meta name="twitter:player" content="https://nekonenene.github.io/twitter_card_audio_player/frame.html">
     <meta name="twitter:player:width" content="480">
     <meta name="twitter:player:height" content="360">
     <style type="text/css">
