Specified URL for twitter:image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:site" content="@nekonenene">
     <meta name="twitter:title" content="Twitter Player Card Test">
     <meta name="twitter:description" content="Twitter Card でオーディオも埋め込めるっぽい？ ので試す">
-    <meta name="twitter:image" content="./favicon.png">
+    <meta name="twitter:image" content="https://nekonenene.github.io/twitter_card_audio_player/favicon.png">
     <meta name="twitter:player" content="https://nekonenene.github.io/twitter_card_audio_player/frame.html">
     <meta name="twitter:player:width" content="480">
     <meta name="twitter:player:height" content="360">
