--- a/frame.html
+++ b/frame.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="audio-container">
-      <audio src="8bit_pochi.mp3" controls>
+      <audio src="8bit_pochi.mp3" controls autoplay>
         <p>お使いのブラウザはオーディオ再生に対応していません</p>
       </audio>
     </div>
