--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
       <p>ドキュメント: <a href="https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/player-card">https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/player-card</a></p>
       <p>参考: <a href="https://github.com/twitterdev/cards-player-samples">https://github.com/twitterdev/cards-player-samples</a></p>
     </div>
-    <div style="text-align: center">
+    <div style="text-align: center; margin-bottom: 2rem">
       <iframe src="./frame.html" width="480px" height="360px"></iframe>
+    </div>
+    <div>
+      <p>リポジトリ: <a href="https://github.com/nekonenene/twitter_card_audio_player">https://github.com/nekonenene/twitter_card_audio_player</a></p>
     </div>
   </body>
 </html>
