--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>参考: <a href="https://github.com/twitterdev/cards-player-samples">https://github.com/twitterdev/cards-player-samples</a></p>
     </div>
     <div style="text-align: center; margin-bottom: 2rem">
-      <iframe src="./frame.html" width="480px" height="360px"></iframe>
+      <iframe src="./frame.html" allow="autoplay 'src'" width="480px" height="360px"></iframe>
     </div>
     <div>
       <p>リポジトリ: <a href="https://github.com/nekonenene/twitter_card_audio_player">https://github.com/nekonenene/twitter_card_audio_player</a></p>
